yaml-file/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp
  namespace: default
  labels:
    app: myapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - myapp.farhan.id
    secretName: myapp.farhan.id
  rules:
  - host: myapp.farhan.id
    http:
      paths: 
      - path: /
        backend:
          serviceName: myapp
          servicePort: 80
